ChatCITの機能を追加

--- a/views/chatcit.ejs
+++ b/views/chatcit.ejs
@@ -7,7 +7,7 @@
 <body>
     <h1>ChatCIT</h1>
     千葉工業大学のうさぎが答えるよ！
-
+    <a href="http://localhost:8080/chatcit">会話履歴を消去</a>
     <p> <%- talk%> </p>
     <form action="/chatcit">
         <input type="text" name="usr_message" required>
